#7 - Uneven border box issue fixed

--- a/css/global.css
+++ b/css/global.css
@@ -50,6 +50,8 @@ h3 {
 
 .small-header {
 	font-size: 1em;
+	margin-left: 20px;
+	width: 20px;
 
 }
 
@@ -307,6 +309,9 @@ nav {
 	margin: 20px 0;
 	position: relative;
 	height: 250px;
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .content-box:hover {
@@ -314,24 +319,25 @@ nav {
 }
 
 .content-copy {
-	padding: 20px ;
+	padding: 20px;
 	font-size: 14px;
 	line-height: 135.02%;
+	
 }
+
 
 .learn-more { 
 	border-top: solid 1px #252525;
-	margin: none;
-	height: 20px;	
-}
+	margin: none;	
+ 	}
+	
 
 .learn-more-a {
 	text-transform: uppercase;
 	font-weight: 700;
 	color: #252525;
 	padding: 20px;
-	position:absolute;
-	bottom:0;
+	display: block;
 }
 
 .learn-section {
@@ -582,6 +588,7 @@ footer a:hover {
 
 .footer-nav-link {
 	color: #fff;
+	display: block;
 }
 
 	.footer-nav-end {
